<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".StudentRegistration">
    android:paddingBottom="25dp"

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-251dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strFirstName"
                android:inputType="textPersonName"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strLastName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strUniversity"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLastName"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtMajor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strMajors"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtUniversity"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtMinor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strMinors"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMajor"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtStudentGPA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strGPA"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMinor"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strBio"
                android:importantForAutofill="no"
                android:inputType="textLongMessage"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtStudentGPA2"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtInterests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strInterestsHint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBio"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtStudentUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strUsername"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBio"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/txtReEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/accent1"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/strReEnterPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/accent1"
                android:textColorHint="@color/accent1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="300dp"
                android:background="@drawable/button_accent1"
                android:fontFamily="@font/roboto_medium"
                android:onClick="registerStudent"
                android:text="@string/strRegister"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>